--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>F1チーム</title>
   <link rel="stylesheet" href="./style.css">
-  <script src="./jquery-3.7.1.min.js"></script>
+  <script src="./js/jquery-3.7.1.min.js"></script>
 </head>
 <body>
   <div>
@@ -59,6 +59,6 @@
     </form>
   </div>
 
-  <script src="./app.js"></script>
+  <script src="./js/app.js"></script>
 </body>
 </html>
